# ng-notebook

./: .gitignore  README.md  pyproject.toml
src/ng-notebook/: app.py  main.py  run_frontend.py
src/ng-notebook/api/: routes.py
src/ng-notebook/core/: config.py
src/ng-notebook/frontend/: app.py
src/ng-notebook/models/: document.py
src/ng-notebook/services/: document_processor.py  vector_store.py
src/ng_notebook/: __init__.py  app.py  main.py
src/ng_notebook/api/: routes.py
src/ng_notebook/core/: config.py
src/ng_notebook/frontend/: api_client.py  app.py  state.py
src/ng_notebook/frontend/static/: styles.css
src/ng_notebook/frontend/static/css/: style.css  styles.css
src/ng_notebook/frontend/templates/: layout.py  markdown.py
src/ng_notebook/frontend/utils/: css.py
src/ng_notebook/models/: document.py
src/ng_notebook/services/: chat_service.py  document_processor.py  sqlite_store.py  upload_service.py  vector_store.py
tests/: test_document_processor.py  test_routes.py  test_sqlite_store.py  test_vector_store.py
